# pocket-guide

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: data.yaml  dataset_v2_build.yaml  eval.yaml  inference.yaml  model_registry.yaml  quantize_gguf.yaml  report.yaml.example  runtime_local.yaml  teacher.yaml  train.yaml  train_lora.yaml  train_lora_l40s.yaml  train_lora_v2.yaml  train_lora_v3.yaml  train_lora_v4.yaml  train_lora_v5.yaml
docs/: communicating_results_and_v3.md  data-pipeline-full.md  data-via-git-or-rsync.md  environment-setup.md  eval_run_samples_lightning.md  eval_schema_failures_and_comparison.md  evaluation_report_base_v0.md  evaluation_report_v2.md  inference_guide.md  iteration_notes_v2.md  lightning-ai-training-checklist.md  lightning-artifacts-backup.md  lightning_python_commands.md  lightning_setup_v5.md  local_runtime_guide.md  schema_validity_analysis.md  train_v2_lightning.md  v1_v2_more_story.md  v4_and_eval_speed.md  v5_commands.md  v5_summary.md
models/: README.md
scripts/: inspect_pipeline.py  regate_overconfident_rejections.py
tests/: test_balancing.py  test_build_dataset_v2_smoke.py  test_collator_masking.py  test_generate_critiques.py  test_generate_dataset_v1.py  test_generate_drafts.py  test_generate_report_smoke.py  test_inference_base_model.py  test_inference_cli_local_stub.py  test_inference_cli_parse_fail_graceful.py  test_inference_run_local_stub.py  test_local_cli_stub.py  test_local_eval_smoke.py  test_local_eval_v2_pathing.py  test_measure_perf_smoke.py  test_metrics_v0.py  test_parsing.py  (+20 more)
(+101 files in other folders)
